[package]
name = "Tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.23" }
ggez = { version = "0.8.0-rc0" }
glam = { version = "0.20", features = ["mint"] }
rand = "0.8"
stopwatch = "0.0.7"