[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.23" }
ggez = { version = "0.9.0-rc0" }
glam = { version = "0.20", features = ["mint"] }
rand = "0.8"
stopwatch = "0.0.7"
winapi = {version = "0.3", features = ["wincon", "winuser"]}